fix project create
